2006-08-22  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* THANKS: update sponsors.

	* ly/english.ly: quarter tone naming (thanks, Trevor Baca)

	* Documentation/topdocs/NEWS.tely (Top): doc new feature.

	* input/regression/tie-chord-untied.ly: new file.

	* lily/tie-engraver.cc (acknowledge_note_head): check 'untied property.

	* scm/define-music-properties.scm (all-music-properties): add
	'untied property.

	* buildscripts/mutopia-index.py (allfiles): look for .ly rather
	than .ly.txt.
	(headertext_nopics): sanitize no-examples text.

	* scm/page.scm (make-page-stencil): don't rely on extents of
	page-stencil. This fixes spurious space around .EPS files produced
	with the EPS backend.

2006-08-21  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* lily/stencil-scheme.cc (LY_DEFINE): make extent arguments optional.

	* lily/hara-kiri-engraver.cc (process_music): remember
	keepAliveInterfaces after processing \set

	* lily/lyric-extender.cc (print): support left/right-padding for
	extenders.

	* scm/documentation-generate.scm (string-append): revert lilypond/
	path, doc why.

2006-08-20  Graham Percival  <gpermus@gmail.com>

	* Documentation/user/lilypond.tely: clarification to
	license presentation (not to actual license).

	* Documentation/user/basic-notation.itely,
	instrument-notation.itely: minor changes.

	* input/ {regression, test}/+.ly: clarification to
	text (you can click on examples).  Thanks, Mats!

	* input/manual/bar-lines.ly: adds ||: repeats.

2006-08-20  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* make/ly-vars.make (OMF_FILES): strip ps.gz from OMF_FILES 

	* scm/documentation-lib.scm (texi-file-head): category LilyPond.

	* Documentation/user/lilypond.tely: strip lilypond/ from info
	links, rename to category LilyPond

	* lily/pango-font.cc (description_string): new function.

	* VERSION: release 2.9.15

	* lily/spacing-engraver.cc (stop_translation_timestep): use
	Dscho's fix for spacing spanner. 

	* scm/define-music-types.scm (music-descriptions): use